--- a/request_page_user.html
+++ b/request_page_user.html
@@ -52,7 +52,7 @@
                                 <td>Eleni</td>
                                 <td>Annie</td>
                                 <td>11/01/22</td>
-                                <td><button class="btn" type="button" data-bs-toggle="modal" data-bs-target="summary"><i class="far fa-edit" style="font-size: 24px;"></i></button></td>
+                                <td><button class="btn" type="button" data-bs-toggle="modal" data-bs-target="#summary"><i class="far fa-edit" style="font-size: 24px;"></i></button></td>
                                 <td>Complete</td>
                             </tr>
                             <tr>
@@ -91,7 +91,7 @@
                     </ul>
                 </nav>
             </div>
-            <div class="modal fade" role="dialog" tabindex="-1" id="modal-1">
+            <div class="modal fade" role="dialog" tabindex="-1" id="summary">
                 <div class="modal-dialog" role="document">
                     <div class="modal-content">
                         <div class="modal-header">
