--- a/request_page.html
+++ b/request_page.html
@@ -54,8 +54,8 @@
                                 <td>Eleni</td>
                                 <td>Annie</td>
                                 <td>11/01/22</td>
-                                <td><button class="btn" type="button" date-bs-toggle="modal" data-bs-target="summary"><i class="far fa-edit" style="font-size: 24px;"></i></button></td>
-                                <td><button class="btn btn-primary my-button" type="button" data-bs-toggle="modal" data-bs-target="fulfill">Fulfill</button></td>
+                                <td><button class="btn" type="button" data-bs-toggle="modal" data-bs-target="#summary"><i class="far fa-edit" style="font-size: 24px;"></i></button></td>
+                                <td><button class="btn btn-primary my-button" type="button" data-bs-toggle="modal" data-bs-target="#fulfill">Fulfill</button></td>
                             </tr>
                             <tr>
                                 <td>Suman</td>
